--- a/data/config.json
+++ b/data/config.json
@@ -1,14 +1,18 @@
 {
     "physicians": [
-      "Dude",
-      "Smith",
-      "Johnson",
-      "Williams"
+      "Dalwadi",
+      "Galvan",
+      "Ha",
+      "Kluwe",
+      "Le",
+      "Lewis",
+      "Newman"
     ],
     "physicists": [
-      "Prawn",
-      "Taylor",
-      "Brown",
-      "Davis"
+      "Bassiri",
+      "Kirby",
+      "Papanikolaou",
+      "Paschal",
+      "Rasmussen"
     ]
   }
